# project-lvl1-s566

./: .fuse_hidden0000003500000002  .gitignore  .travis.yml  README.md  Untitled Document  pyproject.toml
brain_games/: __init__.py  cli.py  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_engine.py
brain_games/scripts/: brain-calc.py  brain-even.py  brain-gcd.py  brain-prime.py  brain-progression.py  brain_calc.py  brain_even.py  brain_even_old.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  game_template.py
brain_games/scripts/chanks(old)/: even_session.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
qqpy3ko_brain_games.egg-info/: PKG-INFO  SOURCES.txt
