[tool.poetry]
name = "QQpy3ko_brain_games"
version = "0.3.1"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "brain_games" },
  ]


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

