[tool.poetry]
name = "QQpy3ko_brain_games"
version = "0.6.5"
description = ""
classifiers = [
    "Topic :: Games/Entertainment :: Board Games"
]
authors = "Aleksandr Vinogradov"
packages = [
    { include = "brain_games" },
]
repository = "https://github.com/QQpy3ko/project-lvl1-s566"


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain-games:main"
brain-even = "brain_games.scripts.brain-even:main"
brain-calc = "brain_games.scripts.brain-calc:main"
brain-gcd = "brain_games.scripts.brain-gcd:main"
brain-progression = "brain_games.scripts.brain-progression:main"
brain-prime = "brain_games.scripts.brain-prime:main"

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

